Simplify anagram challenge